dodaj query parametre za get tasks